Sun Oct 01 06:31:37 BST 2006  Olly Betts <olly@survex.com>

	* xapian.i: Use SWIGPHP instead of SWIGPHP4 since we want those
	  parts for both PHP4 and PHP5 (SWIG's semantics have changed).

Sun Oct 01 06:17:14 BST 2006  Olly Betts <olly@survex.com>

	* ruby/docs/examples/simplesearch.rb: Lowercase terms before stemming.
	  Tweak output a bit.
	* ruby/docs/examples/simplematchdecider.rb: Implemented, but the
	  bindings don't currently enable directors for Ruby.

Sun Oct 01 06:14:52 BST 2006  Olly Betts <olly@survex.com>

	* csharp/Makefile.am: SWIG C# now supports directors, so we get a
	  xapian_wrap.h file generated too which we need to ship.  Also
	  remove the "nodist_" prefix from "XapianSharp_la_SOURCES" since
	  we do want to distribute xapian_wrap.cc (and already mark it
	  for explicit distribution elsewhere!)

Sat Sep 30 19:49:18 BST 2006  Olly Betts <olly@survex.com>

	* python/docs/examples/simplematchdecider.py: Call the MyMatchDecider
	  instance "mdecider" rather than "matcher", to avoid confusing the
	  reader.

Sat Sep 30 03:30:33 BST 2006  Olly Betts <olly@survex.com>

	* ruby/Makefile.am: Oops, xapian.rb isn't a generated file.  Undo
	  last change, use the "dist_" prefix and let "make clean" remove
	  the BUILT_SOURCES if we're in MAINTAINER_MODE.

Sat Sep 30 03:28:19 BST 2006  Olly Betts <olly@survex.com>

	* ruby/Makefile.am: Add dependencies and clean rules for xapian.rb.

Sat Sep 30 03:22:10 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Look for ruby interpreter as "ruby1.8" since it's
	  called that (with no "ruby" alias) on Ubuntu dapper at least.

Sat Sep 30 03:03:30 BST 2006  Olly Betts <olly@survex.com>

	* python/docs/examples/simplematchdecider.py: Fix typo in comment.

Sat Sep 30 03:01:22 BST 2006  Olly Betts <olly@survex.com>

	* python/Makefile.am: Prefer $(PYTHON_MODERN_OR_OLDE) to
	  @PYTHON_MODERN_OR_OLDE@.  No need to list xapian_wrap.h in
	  _xapian_la_SOURCES.
